testsuite/tests/properties/invalid_unique/not_array.lkt
import common

class Example: FooNode implements TokenNode {
    @exported fun test(): Bool = node.unique
}
